# tura

./: .gitattributes  .gitignore  .npmignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  architect.md  command_run_frontend_playwright_e2e_f249677_baseline.mjs  i18n.js  loading-animations.html  package.json  requirements.txt  source_port_rewrite_suite.mjs  新建文本文档.txt
agents/: ARCHITECTURE.md  Cargo.toml
agents/src/: coding_agent.rs  lib.rs  store.rs
agents/src/balanced/: agent_config.json  prompt.md
agents/src/business-agent/: agent_config.json  prompt.md
agents/src/coding_agent/: agent_config.json  prompt.md
agents/src/coding_agent_fast/: agent_config.json  prompt.md
agents/src/coding_agent_instant/: agent_config.json  prompt.md
agents/src/coding_agent_planning/: agent_config.json  prompt.md
agents/src/direct/: agent_config.json  prompt.md
agents/src/direct-text-only/: agent_config.json  prompt.md
agents/src/fast/: agent_config.json  prompt.md
agents/src/fast-text-only/: agent_config.json  prompt.md
agents/src/thinking/: agent_config.json  prompt.md
agents/src/thinking-planning/: agent_config.json  prompt.md
agents/src/thinking-visual/: agent_config.json  prompt.md
agents/src/thoughtful/: agent_config.json  prompt.md
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/permissions/: allow-native-input-files.toml  allow-open-external-url.toml  allow-start-gateway.toml
apps/tauri/src-tauri/resources/: .gitignore
apps/tauri/src-tauri/src/: main.rs
commands/image_generate/: Cargo.toml  command.toml  install.ps1  install.sh  mod.rs  policy.toml  prompt.md  schema.json
commands/image_generate/src/: access.rs  args.rs  config.rs  files.rs  main.rs  output.rs  providers.rs  runner.rs  tests.rs  types.rs
commands/image_generate/tests/business/: image_generate_local_flow.rs
commands/image_generate/tests/live/: image_generate_live_provider_check.rs
commands/read_media/: Cargo.toml  install.ps1  install.sh  mod.rs  policy.toml  prompt.md  requirements.txt  schema.json
commands/read_media/src/: args.rs  document.rs  media_image.rs  output.rs  paths.rs  pdf.rs  previews.rs  processing.rs  runner.rs  video.rs
commands/web_discover/: Cargo.toml  command.toml  install.ps1  install.sh  mod.rs  prompt.md  schema.json
commands/web_discover/src/: access.rs  args.rs  asset.rs  download.rs  files.rs  filter.rs  media.rs  policy.rs  runner.rs  search.rs  tests.rs  types.rs  util.rs  website.rs
commands/web_discover/tests/: web_discover_asset_cli_e2e.rs
crates/gateway/: ARCHITECTURE.md  Cargo.toml  build.rs
crates/gateway/src/: channel.rs  handler.rs  lib.rs  media.rs  process_lock.rs  router_client.rs  router_process.rs  runtime.rs  runtime_worker.rs  session_db_client.rs  session_feed.rs  session_log_writer.rs  simple_runtime.rs  tray.rs  types.rs
crates/gateway/src/api/: about.rs  (+27 more)
crates/gateway/tests/: config_split_test.rs  gateway_model_latency_probe.mjs  local_bind_test.rs  oauth_business_page.html  oauth_business_web_e2e.mjs  oauth_mock_e2e.mjs  provider_auth_surface_test.rs  session_lifecycle_db_test.rs  task_management_contract_test.rs
crates/provider/: ARCHITECTURE.md  Cargo.toml
crates/provider/config/: provider_config.json  tura_llm_config.json
crates/provider/docs/: github-copilot.md
crates/provider/src/: auth_registry.rs  content_type_fallback.rs  lib.rs  logging.rs  metrics.rs  mod.rs  response_extraction.rs  streaming.rs  tura_conf.rs  tura_llm.rs  tura_llm_conf.rs  tura_llm_config.rs  tura_llm_tests.rs
crates/provider/tests/: claude_code_live_smoke.rs  codex_priority_tps_live.rs  live_model_smoke.rs  provider_route_manual_smoke.rs  responses_tier_live_smoke.rs
crates/router/: ARCHITECTURE.md  Cargo.toml  README.md
crates/router/src/: app.rs  cli.rs  daemon.rs  front_lifecycle.rs  ipc.rs  ipc_handlers.rs  lib.rs  main.rs  process_info.rs  registry.rs  runtime_dispatch.rs  runtime_utils.rs  services.rs  session_log_forward.rs  shutdown.rs  utils.rs
crates/router/tests/: step1_contract.rs  test_lsp_service.py  test_lsp_service.rs  tools_registry_contract.rs
crates/runtime/: ARCHITECTURE.md  Cargo.toml  build.rs
crates/runtime/src/: agent_router.rs  lib.rs  mod.rs  profile_timings.rs  prompt_style.rs  readme.md  router_command_run.rs  runtime_event_writer.rs  session.rs  session_log_client.rs  tool_callback_sanitizer.rs  worker.rs  workspace_git.rs
crates/runtime/tests/: child_dispatch_test.rs  claude_code_live_e2e.rs  claude_code_mock_e2e.rs  coding_agent_live_test.rs  override_manas_direct_test.rs  override_mano_and_manas_test.rs  process_from_user_default_test.rs  prompt_injection_e2e.rs  session_recovery_contract_test.rs  task_management_contract_test.rs
crates/session_log/: ARCHITECTURE.md  Cargo.toml  README.md
crates/session_log/src/: checkpoint.rs  cli.rs  client.rs  client_protocol.rs  file_queue.rs  ipc.rs  lib.rs  local_postgres.rs  migrations.rs  path.rs  protocol.rs  queue.rs  service.rs  session_state.rs  store.rs
crates/session_log/tests/: store_test.rs
crates/session_log_contract/: Cargo.toml
crates/session_log_contract/src/: checkpoint.rs  client.rs  endpoint.rs  lib.rs  protocol.rs
crates/session_log_contract/tests/: wire_contract.rs
crates/tools/: ARCHITECTURE.md  Cargo.toml
crates/tools/src/: lib.rs  state_machine.rs
crates/tools/tests/: command_interceptor_e2e.rs  command_run_current_flow.rs  web_discover_live_provider_check.rs
crates/utils/: ARCHITECTURE.md  Cargo.toml
crates/utils/src/: lib.rs  md_manager.rs  media_processor.rs  stream_text_processor.rs
personas/: ARCHITECTURE.md  Cargo.toml
personas/src/: expression_manifest.json  lib.rs  state_machine.rs  store.rs
personas/src/communication_style/: cli_communication_style.md  communication_style.md
personas/src/pidan/: persona_config.json
personas/src/tura/: persona_config.json
personas/src/wonderful/: persona_config.json
personas/tests/business/: persona_lifecycle_flow.rs
(+2072 files in other folders)
