[package]
name = "agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tura_agents"
path = "src/lib.rs"

[features]
business-tests = []

[[test]]
name = "agent_lifecycle_flow"
path = "tests/business/agent_lifecycle_flow.rs"
required-features = ["business-tests"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tura_path.workspace = true

[dev-dependencies]
tempfile.workspace = true
