[package]
name = "image_generate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tura_command_image_generate"
path = "mod.rs"

[[bin]]
name = "tura-command-image-generate"
path = "src/main.rs"

[features]
business-tests = []
live-tests = []

[[test]]
name = "image_generate_local_flow"
path = "tests/business/image_generate_local_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "image_generate_live_provider_check"
path = "tests/live/image_generate_live_provider_check.rs"
required-features = ["live-tests"]

[dependencies]
base64.workspace = true
dotenvy.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
provider = { workspace = true }

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
