[package]
name = "read_media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tura_command_read_media"
path = "mod.rs"

[[bin]]
name = "tura-command-read-media"
path = "src/main.rs"

[dependencies]
base64.workspace = true
image.workspace = true
pdfium-render.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
