[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
lazy_static.workspace = true
reqwest = { workspace = true }
sysinfo.workspace = true
base64.workspace = true
sha2.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Internal
runtime = { workspace = true }
provider = { workspace = true }
agents = { workspace = true }
personas = { workspace = true }
router = { workspace = true }
session_log = { workspace = true }

[[bin]]
name = "tura"
path = "src/bin/tura.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"
