[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tura_gateway"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
tracing.workspace = true
fs2.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
lazy_static.workspace = true
reqwest = { workspace = true }
sysinfo.workspace = true
base64.workspace = true
sha2.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Internal
runtime = { workspace = true }
provider = { workspace = true }
tura_path = { workspace = true }
agents = { workspace = true }
personas = { workspace = true }
router = { workspace = true }
session_log = { workspace = true }

[[bin]]
name = "tura_exec"
path = "src/bin/tura_exec.rs"

[[bin]]
name = "tura_gateway"
path = "src/bin/gateway.rs"


[dev-dependencies]
tempfile.workspace = true

[features]
performance-tests = []

[[test]]
name = "process_lifecycle_e2e"
path = "tests/performance/process_lifecycle_e2e.rs"
required-features = ["performance-tests"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
