[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tura_gateway"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
tracing.workspace = true
fs2.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
lazy_static.workspace = true
reqwest = { workspace = true }
sysinfo.workspace = true
base64.workspace = true
sha2.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Internal
runtime = { workspace = true }
provider = { workspace = true }
tura_path = { workspace = true }
agents = { workspace = true }
personas = { workspace = true }
router = { workspace = true }
session_log = { workspace = true }

[[bin]]
name = "tura_exec"
path = "src/bin/tura_exec.rs"

[[bin]]
name = "tura_gateway"
path = "src/bin/gateway.rs"


[dev-dependencies]
tempfile.workspace = true

[features]
business-tests = []
performance-tests = []
os-tests = []

[[test]]
name = "provider_oauth_local_flow"
path = "tests/business/provider_oauth_local_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "session_db_local_flow"
path = "tests/os_testing/session_db_local_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "session_log_api_flow"
path = "tests/business/session_log_api_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "session_prompt_busy_flow"
path = "tests/business/session_prompt_busy_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "session_prompt_router_flow"
path = "tests/os_testing/session_prompt_router_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "agent_persona_settings_flow"
path = "tests/business/agent_persona_settings_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "session_shell_path_flow"
path = "tests/business/session_shell_path_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "session_messages_flow"
path = "tests/business/session_messages_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "file_api_local_flow"
path = "tests/business/file_api_local_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "process_snapshot_flow"
path = "tests/os_testing/process_snapshot_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "process_router_cleanup_flow"
path = "tests/os_testing/process_router_cleanup_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "service_status_flow"
path = "tests/os_testing/service_status_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "task_scheduler_flow"
path = "tests/os_testing/task_scheduler_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "workspace_config_api_flow"
path = "tests/business/workspace_config_api_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "process_lifecycle_e2e"
path = "tests/os_testing/process_lifecycle_e2e.rs"
required-features = ["os-tests"]

[[test]]
name = "gateway_session_concurrency_stress"
path = "tests/performance/gateway_session_concurrency_stress.rs"
required-features = ["performance-tests"]

[[test]]
name = "provider_auth_churn_test"
path = "tests/performance/provider_auth_churn_test.rs"
required-features = ["performance-tests"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
