[package]
name = "provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tura_llm_rust"
path = "src/lib.rs"

[[test]]
name = "provider_tool_call_live_smoke"
path = "tests/business/live/provider_tool_call_live_smoke.rs"
harness = false
required-features = ["business-tests"]

[[test]]
name = "claude_code_live_smoke"
path = "tests/business/live/claude_code_live_smoke.rs"
harness = false
required-features = ["business-tests"]

[[test]]
name = "responses_tier_live_smoke"
path = "tests/business/live/responses_tier_live_smoke.rs"
harness = false
required-features = ["business-tests"]

[[test]]
name = "codex_priority_tps_live"
path = "tests/business/live/codex_priority_tps_live.rs"
required-features = ["business-tests"]

[[test]]
name = "live_model_smoke"
path = "tests/business/live/live_model_smoke.rs"
required-features = ["business-tests"]

[features]
business-tests = []
live-tests = ["business-tests"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
futures-util.workspace = true
regex.workspace = true
tura_path.workspace = true

[dev-dependencies]
tokio-test.workspace = true
futures.workspace = true
