[package]
name = "tura_router"
version = "0.1.0"
edition = "2021"
license.workspace = true
default-run = "tura_router"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tura-agents = { path = "../../agents" }
tura-persona = { path = "../../personas" }
session_log = { path = "../session_log" }
