[package]
name = "router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tura_router"

[lib]
name = "tura_router"
path = "src/lib.rs"

[[bin]]
name = "tura_router"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
agents = { workspace = true }
personas = { workspace = true }
session_log = { workspace = true }
tura_path = { workspace = true }
fs2.workspace = true
