[package]
name = "router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tura_router"

[lib]
name = "tura_router"
path = "src/lib.rs"

[[bin]]
name = "tura_router"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
lifecycle.workspace = true
agents = { workspace = true }
personas = { workspace = true }
session_log_contract.workspace = true
router_contract.workspace = true
runtime_contract.workspace = true
tura_path = { workspace = true }
tools = { workspace = true }
fs2.workspace = true
sysinfo.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
session_log = { workspace = true }
tempfile.workspace = true

[features]
business-tests = []
os-tests = []

[[test]]
name = "worker_lifecycle_flow"
path = "tests/os_testing/worker_lifecycle_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "worker_oneshot_flow"
path = "tests/os_testing/worker_oneshot_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "worker_malformed_output_flow"
path = "tests/os_testing/worker_malformed_output_flow.rs"
required-features = ["os-tests"]

[[test]]
name = "registry_lifecycle_flow"
path = "tests/business/registry_lifecycle_flow.rs"
required-features = ["business-tests"]
