[package]
name = "session_log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "session_log"
path = "src/lib.rs"

[[test]]
name = "process_management_test"
path = "tests/performance/process_management_test.rs"
required-features = ["performance-tests"]

[[test]]
name = "store_concurrency_test"
path = "tests/performance/store_concurrency_test.rs"
required-features = ["performance-tests"]

[[bin]]
name = "tura_session_db"
path = "src/bin/tura_session_db.rs"

[features]
performance-tests = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tura_path.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true
