[package]
name = "session_log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "session_log"
path = "src/lib.rs"

[[test]]
name = "router_adopts_live_session_db_flow"
path = "tests/business/router_adopts_live_session_db_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "session_db_discards_dirty_queue_flow"
path = "tests/business/session_db_discards_dirty_queue_flow.rs"
required-features = ["business-tests"]

[[test]]
name = "process_management_test"
path = "tests/performance/process_management_test.rs"
required-features = ["performance-tests"]

[[test]]
name = "store_concurrency_test"
path = "tests/performance/store_concurrency_test.rs"
required-features = ["performance-tests"]

[[bin]]
name = "tura_session_db"
path = "src/bin/tura_session_db.rs"

[features]
business-tests = []
performance-tests = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tura_path.workspace = true

[dev-dependencies]
sysinfo.workspace = true
tempfile.workspace = true
uuid.workspace = true
