[package]
name = "session_log_contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
lifecycle.workspace = true
serde.workspace = true
serde_json.workspace = true
tura_path.workspace = true
