[package]
name = "tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "code_tools"
path = "src/lib.rs"

[[test]]
name = "web_discover_live_provider_check"
path = "tests/business/live/web_discover_live_provider_check.rs"
required-features = ["business-tests"]

[[test]]
name = "command_run_current_flow"
path = "tests/business/flow/command_run_current_flow.rs"
required-features = ["business-tests"]

[features]
business-tests = []
live-tests = ["business-tests"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
provider.workspace = true

[dev-dependencies]
image.workspace = true
